Feature/visualvm (#62)
* Improving the way to copy folders
* Adding Pitests
* Improving tests
* Improving code
* Uploading a security pipeline